--- a/app/assets/stylesheets/policies.scss
+++ b/app/assets/stylesheets/policies.scss
@@ -1,3 +1,26 @@
-// Place all the styles related to the Policies controller here.
+// Place all the styles related to the Policies contr oller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.policy-table {
+  background-color: #eee;
+  box-shadow: 0.5rem 0.5rem 2rem #ddd;
+  padding: 1rem;
+  text-align: left;
+
+  thead th {
+    border-bottom: 2px solid #04bec3;
+    padding: 0.25rem 2rem 0 0;
+  }
+
+  tbody tr {
+    &:hover {
+      background-color: #04bec3;
+    }
+
+    td {
+      line-height: 1.5rem;
+      padding: 0.25rem;
+    }
+  }
+}
