--- a/app/views/policies/index.html.erb
+++ b/app/views/policies/index.html.erb
@@ -1,32 +1,31 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Policies</h1>
-
-<table>
+<table class="policy-table">
   <thead>
     <tr>
-      <th>Type</th>
+      <th>Policy type</th>
       <th>Division</th>
-      <th>Carrier</th>
-      <th>Client</th>
+      <th>Carrier ID</th>
+      <th>Client ID</th>
       <th>Effective date</th>
       <th>Expiration date</th>
       <th>Written premium</th>
       <th>Carrier policy number</th>
-      <th colspan="3"></th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @policies.each do |policy| %>
       <tr>
-        <td><%= policy.type %></td>
+        <td><%= policy.policy_type %></td>
         <td><%= policy.division %></td>
         <td><%= policy.carrier_id %></td>
         <td><%= policy.client_id %></td>
-        <td><%= policy.effective_date %></td>
-        <td><%= policy.expiration_date %></td>
-        <td><%= policy.written_premium %></td>
+        <td><%= policy.effective_date.to_formatted_s(:year_month_day) %></td>
+        <td><%= policy.expiration_date.to_formatted_s(:year_month_day) %></td>
+        <td><%= number_to_currency(policy.written_premium) %></td>
         <td><%= policy.carrier_policy_number %></td>
         <td><%= link_to 'Show', policy %></td>
         <td><%= link_to 'Edit', edit_policy_path(policy) %></td>
@@ -35,6 +34,8 @@
     <% end %>
   </tbody>
 </table>
+
+<%= will_paginate @policies %>
 
 <br>
 
