--- a/app/views/policies/index.html.erb
+++ b/app/views/policies/index.html.erb
@@ -9,10 +9,10 @@
         <th>Division</th>
         <th>Carrier</th>
         <th>Client</th>
-        <th>Effective date</th>
-        <th>Expiration date</th>
-        <th>Written premium</th>
-        <th>Policy number</th>
+        <th>Effective</th>
+        <th>Expiration</th>
+        <th>Premium</th>
+        <th>Policy No.</th>
         <th colspan="3">Actions</th>
       </tr>
     </thead>
@@ -23,7 +23,7 @@
           <td><%= policy.policy_type %></td>
           <td><%= policy.division %></td>
           <td><%= policy.carrier&.company_name %></td>
-          <td><%= policy.client_id %></td>
+          <td><%= policy.client&.client_name %></td>
           <td><%= policy.effective_date.to_formatted_s(:year_month_day) %></td>
           <td><%= policy.expiration_date.to_formatted_s(:year_month_day) %></td>
           <td><%= number_to_currency(policy.written_premium) %></td>
