--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <header>
+      <h1>Highwing -- New Broker Policies</h1>
+      <span>Assume today is February 3, 2018</span>
+    </header>
     <%= yield %>
   </body>
 </html>
