--- a/app/views/policies/index.html.erb
+++ b/app/views/policies/index.html.erb
@@ -9,8 +9,8 @@
         <th>Division</th>
         <th>Carrier</th>
         <th>Client</th>
-        <th>Effective</th>
-        <th>Expiration</th>
+        <th>Effective Date</th>
+        <th>Expiration Date</th>
         <th>Premium</th>
         <th>Policy No.</th>
         <th colspan="3">Actions</th>
