--- a/app/views/carriers/_form.html.erb
+++ b/app/views/carriers/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :carrier_id %>
-    <%= form.number_field :carrier_id %>
+    <%= form.label :id %>
+    <%= form.number_field :id %>
   </div>
 
   <div class="field">
