--- a/app/views/policies/_form.html.erb
+++ b/app/views/policies/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :type %>
-    <%= form.text_field :type %>
+    <%= form.label :policy_type %>
+    <%= form.text_field :policy_type %>
   </div>
 
   <div class="field">
